name:                xhbmonad
version:             0.1.0
synopsis:            A window manager with xhb as a backend
description:         Please see README.md
homepage:            https://github.com/adrianparvino/xhbmonad
license:             GPL-3
author:              Adrian Parvin D. Ouano
maintainer:          adrianparvino@gmail.com
copyright:           2017 Adrian Parvin D. Ouano
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xhbmonad
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base 
                     , xhb
                     , transfomers